--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             title="All Too Well Cover Art"
                         />
                         <img
-                            src="https://github.com/ksrivera/kodego-te-fe-1/blob/main/vinyl.png?raw=true"
+                            src="./vinyl.png"
                             alt="Album Cover"
                             s
                             class="absolute w-[210px] h-[210px] rounded-lg items-center bg-center mt-7 ml-[108px]"
